--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+**/.DS_Store
+
 # Created by https://www.gitignore.io/api/node,webstorm
 # Edit at https://www.gitignore.io/?templates=node,webstorm
 
